2005-08-17 Pierrick LE GALL

	* modification : major simplification of admin.php. Titles are
	managed by included page, localized items are managed directly in
	the template.

	* new : sub template admin/double_select is included in templates
	admin/cat_options, admin/user_perm and admin/group_perm. I haven't
	been able to use it in admin/picture_modify because it seems
	impossible to have two instance of the same sub-template without
	interfering.

	* modification : bug 99, in profile manager, no auto submit when
	changing language (useless and generate accessibility problem).

	* improvement : HTML semantically correct for administration menu,
	simpler syntax, less tags, correct tags (dl/dt/dd instead of
	div/div).

	* modification : number of waiting elements and unvalidated
	comments are displayed in admin/intro instead of administration
	menu (with a link to the dedicated pages).

	* deletion : no link to profile from admin/user_list anymore (no
	need).

2005-08-16 Pierrick LE GALL

	* modification : admin/group_list screen completely rewrite to
	present the list of existing groups and a form to add a new
	group. Here you can delete a group, go to permissions management
	for a group, go to member list of a group (on admin/user_list with
	a filter on group).
	
	* modification : admin/user_perm and admin/group_perm are not
	directly reachable by the admin menu anymore. Only the user/group
	list lets you reach user/group permissions management screen.

2005-08-15 Pierrick LE GALL

	* new : introduction page to administration section. This page
	gives informations about PhpWebGallery version, PHP version, MySQL
	version, gallery database informations (number of categories,
	elements, users, comments). Ability to request phpwebgallery.net
	for upgrade.

	* deletion : of obsolete admin/admin_phpinfo.php page replaced by
	a link in introduction page.

2005-08-14 Pierrick LE GALL

	* modification : simplification of HTML/CSS code for double select