@@ -597,3 +597,11 @@ div#theNavbar>dl>dd>ul {
   padding-left: 15px;
   margin: 5px;
 }
+
+div#adminMain>fieldset {
+  margin: 10px;
+}
+
+fieldset>legend {
+  font-style: italic;
+}
